crates/compiler/tests/parse_errors/let_in.elm
module Main exposing (..)

x =
    let a = 1
    a
